[package]
name = "gg-transl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1", features = ["full"] }